--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
       <li>Redes Sociales:  Instagram</li>
     </ul>
   </section>
+
+  <section id="proyectos" class="section">
+    <h2>Proyectos</h2>
+    <ul>
+      <li><a href="https://ale1412.github.io/1_color-picker/" target="_blank">Color Picker</a></li>
+      <li><a href="https://ale1412.github.io/2_reloj_digital/" target="_blank">Reloj Digital</a></li>
+      <li><a href="https://ale1412.github.io/3_codigo/" target="_blank">Editor de Código</a></li>
+      <li><a href="https://ale1412.github.io/4_to_do_list/" target="_blank">To-Do List</a></li>
+      <li><a href="https://ale1412.github.io/5_presupuesto/" target="_blank">Presupuesto</a></li>
+    </ul>
+  </section>
   
   <script src="script.js"></script>
 </body>
