--- a/index.html
+++ b/index.html
@@ -75,6 +75,24 @@
         <div class="desc">Presupuesto laboral</div>
       </div>
     </div>
+    <div class="responsive">
+      <div class="gallery">
+        <a target="_blank" href="https://ale1412.github.io/6_Hamburgesas/
+        ">
+          <img src="img/hamburgesas.png" alt="presupuesto laboral">
+        </a>
+        <div class="desc">Presupuesto de Hamburgesas</div>
+      </div>
+    </div>
+    <div class="responsive">
+      <div class="gallery">
+        <a target="_blank" href="https://ale1412.github.io/7_Presupuesto_de_buses/
+        ">
+          <img src="img/viajes.png" alt="presupuesto laboral">
+        </a>
+        <div class="desc">Presupuesto de viajes</div>
+      </div>
+    </div>
   </section>
   
   <section id="sobre-mi" class="section">
